--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@prisma/client": "^6.6.0",
+    "@prisma/extension-accelerate": "^1.3.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2"
@@ -22,5 +24,11 @@
   "bugs": {
     "url": "https://github.com/andreaamasio/Project_Blog_API/issues"
   },
-  "homepage": "https://github.com/andreaamasio/Project_Blog_API#readme"
+  "homepage": "https://github.com/andreaamasio/Project_Blog_API#readme",
+  "devDependencies": {
+    "@types/node": "^22.14.0",
+    "prisma": "^6.6.0",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3"
+  }
 }
